--- a/app/assets/stylesheets/status.css.scss
+++ b/app/assets/stylesheets/status.css.scss
@@ -5,9 +5,6 @@
 		border-bottom: 4px solid #ccc;
 		height: 400px;
 		margin: -20px -20px 40px;
-/*		position: absolute;
-		top: 100px;
-		width: 100%;
-*/	}
+	}
 	
 }
