--- a/app/views/welcome/legal.html.slim
+++ b/app/views/welcome/legal.html.slim
@@ -1,7 +1,7 @@
 h1 Legal
 div 
 	h3 Acceptance of the Terms of Service
-	p Welcome to BitTorious, provided by TGen (a.k.a. "We", "Us", or "Our"). We are excited to have you as user and member of the community.
+	p Welcome to BitTorious. We are excited to have you as user and member of the community.
 	  The following terms and conditions (collectively, these "Terms of Service") apply to your use of BitTorious, including any content,
 	  functionality and services offered on or via BitTorious (the "Website"). We want to keep our relationship with you as lean and informal as possible,
 	  but please read the Terms of Service carefully before using BitTorious, because by using the Website you accept and agree to be bound and abide by these Terms of Service.
