--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,8 @@
  *= require_tree .
  */
 
+body {
+  // background: url(/assets/textures/tileable_wood_texture/tileable_wood_texture.png) repeat;
+  background: url(/assets/textures/xv/xv.png) repeat;
+
+}
