--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,108 +1,89 @@
-.content {
 
-	#dashboard {
-    	h1, h2 {
-    	  color: #fafafa;
-    	  text-shadow: black 0 0.1em 0.2em;
-    	}
-/*    	#torrents {
-    	  .btn.disabled {
-    	    display: none;
-    	  }
-    	}*/
-    	#feed_torrents {
-    	  .btn {
-    	    margin-right: 5px;
-    	  }
-    	}
+ 
 
-    	#feeds {
+#dashboard {
 
-  			td:nth-child(1),
-  			td:nth-child(2) {
-  				cursor: pointer;
-  			}
-        a {
-          margin-top: 10px;
-        }
-    	}
 
-      #create_feed_dialog {
-        #new_feed {
-          #feed_buttons {
-            display: none;
-          }
-        }
-      }
-
-    	#torrents {
+  	#feeds {
 
 			td:nth-child(1),
-			td:nth-child(2),
-			td:nth-child(3),
-			td:nth-child(4),
-			td:nth-child(5) {
+			td:nth-child(2) {
 				cursor: pointer;
 			}
-    	}
-    	#feeds,
-    	#torrents {
-    		tr {
-    			-webkit-transition:	all .2s ease-out;
-				-moz-transition:	all .2s ease-out;
-				-o-transition:		all .2s ease-out;
-				transition:			all .2s ease-out;
+      a {
+        margin-top: 10px;
+      }
+  	}
 
-				a:visited.btn {
-					color: #fff;
-				};
-
-    		}
-    		tr:hover {
-    			background-color: #c7e6f8;
-
-/*    			box-shadow: 0 0 10px rgba(0,0,0,0.5) inset;
-    			-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5) inset;
-    			-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5) inset;
-*/
-    			-webkit-transition:	all .2s ease-out;
-				-moz-transition:	all .2s ease-out;
-				-o-transition:		all .2s ease-out;
-				transition:			all .2s ease-out;
-    		} 
-    	}
-
-        #torrent_details_container {
-            margin: 40px -20px -20px -20px;
-            padding: 20px;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-
-            #torrent_details {
-                background: url(/assets/textures/xv/xv.png) repeat;
-                box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
-                border-radius: 10px;
-                padding: 20px;
-            }
-
-            #map_canvas {
-                height: 400px;
-                margin: 20px;
-                padding: 20px;
-                box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
-            }
-
-            #disqus {
-               display: none;
-               background: url(/assets/textures/tileable_wood_texture/tileable_wood_texture.png) repeat;
-               margin: 20px;
-               padding: 20px;
-               box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
-               border-radius: 10px;
-            }
+    #create_feed_dialog {
+      #new_feed {
+        #feed_buttons {
+          display: none;
         }
+      }
+    }
+
+  	#torrents {
+
+		td:nth-child(1),
+		td:nth-child(2),
+		td:nth-child(3),
+		td:nth-child(4),
+		td:nth-child(5) {
+			cursor: pointer;
+		}
+  	}
+  	#feeds,
+  	#torrents {
+  		tr {
+  			-webkit-transition:	all .2s ease-out;
+			-moz-transition:	all .2s ease-out;
+			-o-transition:		all .2s ease-out;
+			transition:			all .2s ease-out;
+
+			// a:visited.btn {
+			// 	color: #fff;
+			// };
+
+  		}
+  		tr:hover {
+  			background-color: #c7e6f8;
+  			-webkit-transition:	all .2s ease-out;
+			  -moz-transition:	all .2s ease-out;
+			  -o-transition:		all .2s ease-out;
+			  transition:			all .2s ease-out;
+  		} 
+  	}
+
+      #torrent_details_container {
+          margin: 40px -20px -20px -20px;
+          padding: 20px;
+          border-bottom-left-radius: 10px;
+          border-bottom-right-radius: 10px;
+
+          #torrent_details {
+              background: url(/assets/textures/xv/xv.png) repeat;
+              box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
+              border-radius: 10px;
+              padding: 20px;
+          }
+
+          #map_canvas {
+              height: 400px;
+              margin: 20px;
+              padding: 20px;
+              box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
+          }
+
+          #disqus {
+             display: none;
+             background: url(/assets/textures/tileable_wood_texture/tileable_wood_texture.png) repeat;
+             margin: 20px;
+             padding: 20px;
+             box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
+             border-radius: 10px;
+          }
+      }
 
 
-   	}
-
-}
+ 	}
