--- a/app/views/users/manage.html.slim
+++ b/app/views/users/manage.html.slim
@@ -5,43 +5,41 @@
 
 	ul.nav.nav-tabs
 		li.active
-			a href="#requests" data-toggle="tab" Pending Account Requests
-		li
 			a href="#accounts" data-toggle="tab" Active Accounts
+		li
+			a href="#requests" data-toggle="tab" Pending Account Requests
 
 	.tab-content
+	
+		.tab-pane.active#accounts
+			- if @approved.length > 0
+				table.table.table-striped.table-condensed
+					thead
+						tr
+							th Name
+							th Email
+							th Admin?
+							th Created
+							th Last Login
+							th Actions
+					tbody id="approved_users"
+						=render :partial => 'approved_user', :collection => @approved
 
-		.tab-pane.active#requests
-			table.table.table-striped.table-condensed
-				thead
-					tr
-						th Email
-						th Created
-						th Actions
-				tbody
-					- @pending.each do |user|
-						tr id="user_#{user.id}"
-							td #{user.email}
-							td
-								= time_ago_in_words user.created_at
-								|  ago.
-							td
-								= button_to 'Approve', approve_user_path(user), :remote => true, :class => 'btn btn-primary', form_class: 'approve button_to'
-								= button_to 'Deny', deny_user_path(user), :remote => true, :class => 'btn btn-primary deny', form_class: 'deny button_to', confirm: 'Are you sure you want to deny access to this user?'
-							
-			
-		.tab-pane#accounts
-			table.table.table-striped.table-condensed.table-border
-				thead
-					tr
-						th Name
-						th Email
-						th Admin?
-						th Created
-						th Last Login
-						th Actions
-				tbody id="approved_users"
-					=render :partial => 'approved_user', :collection => @approved
-						
-							
-							
+		.tab-pane#requests
+			- if @pending.length > 0
+				table.table.table-striped.table-condensed
+					thead
+						tr
+							th Email
+							th Created
+							th Actions
+					tbody
+						- @pending.each do |user|
+							tr id="user_#{user.id}"
+								td #{user.email}
+								td
+									= time_ago_in_words user.created_at
+									|  ago.
+								td
+									= button_to 'Approve', approve_user_path(user), :remote => true, :class => 'btn 	btn-primary', form_class: 'approve button_to'
+									= button_to 'Deny', deny_user_path(user), :remote => true, :class => 'btn btn-	primary deny', form_class: 'deny button_to', confirm: 'Are you sure you 	want to deny access to this user?'
