--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -1,15 +1,13 @@
-= content_for :title do
-  | Dashboard
+- content_for :title do 'Dashboard' end
+- content_for :body_class do 'dashboard' end
   
-div#dashboard
-
-  h1 Dashboard
+#dashboard
   
-  div.row
+  .row
   
-    div.col-md-4#feeds
+    .col-md-4#feeds
       h2
-        | Feeds
+        | Dashboard
         =link_to '<i class="icon-tasks icon-white"></i> All Torrents RSS'.html_safe, '#rss_dialog', 'class' => "pull-right show_rss_dialog_button btn btn-success", 'data-url' => torrents_rss_url(), 'role' => 'button', 'data-toggle' => 'modal'
       table.table.table-condensed
         thead
@@ -26,83 +24,62 @@ div#dashboard
               td data-id="#{feed.id}" data-href="#{url_for feed}" #{time_ago_in_words feed.torrents.last.created_at + 'ago' rescue "Never"}
               td
                 .button-group
-                  button.btn.btn-default.show_rss_dialog_button#rss_dialog type="button" data-url="#{feed_rss_url(feed)}" data-toggle="modal"
-                    span class="glyphicon glyphicon-list"
-                    | RSS
-                / = link_to '<i class="icon-tasks icon-white"></i> RSS'.html_safe, url_for(feed) + '.rss', 'class' => "show_rss_dialog_button btn btn-info", 'data-url' => (url_for(feed) + '.rss')
+                  a.btn.btn-sm.show_rss_dialog_button#rss_dialog type="button" href="#{feed_rss_url(feed)}" data-toggle="modal"
+                    i.icon.icon-rss
+                    |  RSS
                   - if can? :manage, feed
-                    = link_to '<span class="icon-edit icon-white"></span> Edit'.html_safe, edit_feed_path(feed), 'class' => "btn btn-warning"
-                    = link_to '<i class="icon-trash icon-white"></i> Delete'.html_safe, feed, 'class' => "btn btn-danger", method: :delete, data: {confirm: 'This will permanently delete the feed from the system, and existing subscribers will no longer receive data.'} if feed.torrents.count == 0
+                    = link_to '<span class="icon-edit icon-white"></span> Edit'.html_safe, edit_feed_path(feed), 'class' => "btn btn-sm"
+                    = link_to '<i class="icon-trash icon-white"></i> Delete'.html_safe, feed, 'class' => "btn btn-sm", method: :delete, data: {confirm: 'This will permanently delete the feed from the system, and existing subscribers will no longer receive data.'} if feed.torrents.count == 0
       p.muted
         | Select a feed to show torrents published to it. The RSS link can be used by your BitTorrent client to
         | automatically download data published to the feed. For details, see the #{link_to "tutorial", 'getting_started'}.
 
-      div id="rss_dialog" class="modal hide fade"
-        div class="modal-header"
-          button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
-          h3 Handy RSS URL.
-        div class="modal-body"
-          p class="lead"
+      .modal.fade#rss_dialog tabindex="-1" role="dialog" aria-labelledby="rss_dialog_label" aria-hidden="true"
+        .modal-header
+          button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
+          h4.modal-title#rss_dialog_label Handy RSS URL.
+        .modal-body
+          p.lead
             | Paste this URL into your BitTorrent client for nifty automatic downloading of all torrents published to the feed! (Don't forget to set an email/password for our required proxy server.)
-          div class="well well-large"
+          .well.well-large
             a id="rss_link" href="#" url_for('/')
-        div class="modal-footer"
-          a href="#" class="btn" data-dismiss="modal" Got it!
+        .modal-footer
+            button.btn.button-default type="button" data-dismiss="modal" Close
+
       - if can? :create, Feed
-        button href="#create_feed_dialog" role="button" class="btn" data-toggle="modal" Create a feed.
-      
-      div id="create_feed_dialog" class="modal hide fade"
-        div class="modal-header"
-          button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
-          h3 Create a new data feed.
-        div class="modal-body"
-          - @feed = Feed.new
-          = render partial: 'feeds/form'
-        div class="modal-footer"
-          a href="#" class="btn" data-dismiss="modal" Nevermind.
-          a href="#" class="btn btn-primary" data-loading-text="Saving.." id="create_feed_btn" Create the feed!
+        button.btn href="#create_feed_dialog" data-toggle="modal" Create a feed.
+        .modal.fade#create_feed_dialog tabindex="-1" role="dialog" aria-labelledby="create_dialog_label" aria-hidden="true"
+          .modal-header
+            button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
+            h4.modal-title#create_feed_label Modal title
+          .modal-body
+            - @feed = Feed.new
+            = render partial: 'feeds/form'
+          .modal-footer
+            button.btn.button-default type="button" data-dismiss="modal" Nevermind.
+            button.btn.btn-primary#create_feed_btn type="button" data-loading-text="Saving.." Create the feed!
   
-    div.col-md-8#torrents
-      h2 Torrents
-      table class="table table-condensed" id='feed_torrents'
-        thead
-          tr
-            th class="sorting" Name
-            th class="sorting" Published By
-            th class="sorting" Seeds
-            th class="sorting" Peers
-            th class="sorting" Size
-            th Actions
-        = render :partial => 'torrent_feed', :locals => {:torrents => (@selected_feed.torrents rescue [])}
-      -if can? :create, Torrent
-        button href="#upload_torrent_dialog" role="button" class="btn disabled" data-toggle="modal" Publish a torrent.
+    .col-md-8#feed_details
+
+      ul.nav.nav-tabs
+        li.active
+          a href="#torrents" data-toggle="tab" Torrents
+        li
+          a href="#profile" data-toggle="tab" Profile
+        li
+          a href="#messages" data-toggle="tab" Messages
+        li
+          a href="#settings" data-toggle="tab" Settings
       
-      div id="upload_torrent_dialog" class="modal hide fade"
-          div class="modal-header"
-            button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
-            h3 Publish a torrent.
-          =form_for Torrent.new do |f|
-            div class="modal-body"
-              div class="field"
-                = f.hidden_field :user_id, :value => current_user.id
-                = f.hidden_field :feed_id
-                = f.label :name
-                p class="muted" Human-readable name for the torrent.
-                = f.text_field :name, placeholder: 'Demo Package X', required: false
-              div class="field"
-                = f.label :permalink
-                p class="muted" 
-                  | Optional human-readable portion of the torrent's URL.
-                = f.text_field :slug, placeholder: 'demo_package_x', required: false
-              div class="field"
-                = f.label :tags
-                p class="muted" Comma-separated list of freeform tags. Try to stick to lowercase alphanumerics to make searching easier for your subscribers.
-                = f.text_field :tag_list, :class => "torrent_tags", required: true
-              div class="field"
-                = f.file_field :torrent_file, required: true
-            div class="modal-footer"
-              a href="#" class="btn" data-dismiss="modal" Nevemind
-              = f.submit "Publish", :class => 'btn btn-primary', :id => 'publish_btn', :data => {:'loading-text' => 'Saving..'}
+      
+      .tab-content
+        .tab-pane.active#torrents = render partial: 'welcome/dashboard_torrents'
+        .tab-pane#profile
+        .tab-pane#messages
+        .tab-pane#settings
+
+
+
   #torrent_details_container
     #torrent_details
     .row#disqus
