--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,11 @@
  */
 
 body {
-  // background: url(/assets/textures/tileable_wood_texture/tileable_wood_texture.png) repeat;
+  /* background: url(/assets/textures/tileable_wood_texture/tileable_wood_texture.png) repeat; */
   background: url(/assets/textures/xv/xv.png) repeat;
 
+}
+
+footer p > span {
+	padding: 20px;
 }
