--- a/app/views/feeds/show.html.slim
+++ b/app/views/feeds/show.html.slim
@@ -21,7 +21,7 @@
   .tab-content
     .tab-pane.active#torrents = render partial: 'welcome/dashboard_feed_torrents'
     .tab-pane#map
-    .tab-pane#permissions
-    .tab-pane#settings
+    .tab-pane#permissions = render partial: 'welcome/dashboard_feed_permissions'
+    .tab-pane#settings = render partial: 'welcome/dashboard_feed_settings'
   
   
