Fixing bad theme issues.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,8 +16,8 @@ html
     = yield(:javascripts)
 
   body class="#{yield(:body_class)}"
-    header
-      = render 'layouts/navigation'
+    / header
+    = render 'layouts/navigation'
     .main#main
       .container-fluid
         = render 'layouts/messages'
