--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -32,31 +32,10 @@
         | Select a feed to show torrents published to it. The RSS link can be used by your BitTorrent client to
         | automatically download data published to the feed. For details, see the #{link_to "tutorial", 'getting_started'}.
 
-      .modal.fade#rss_dialog tabindex="-1" role="dialog" aria-labelledby="rss_dialog_label" aria-hidden="true"
-        .modal-header
-          button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
-          h4.modal-title#rss_dialog_label Handy RSS URL.
-        .modal-body
-          p.lead
-            | Paste this URL into your BitTorrent client for nifty automatic downloading of all torrents published to the feed! (Don't forget to set an email/password for our required proxy server.)
-          .well.well-large
-            a id="rss_link" href="#" url_for('/')
-        .modal-footer
-            button.btn.button-default type="button" data-dismiss="modal" Close
 
       - if can? :create, Feed
         button.btn href="#create_feed_dialog" data-toggle="modal" Create a feed.
-        .modal.fade#create_feed_dialog tabindex="-1" role="dialog" aria-labelledby="create_dialog_label" aria-hidden="true"
-          .modal-header
-            button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
-            h4.modal-title#create_feed_label Modal title
-          .modal-body
-            - @feed = Feed.new
-            = render partial: 'feeds/form'
-          .modal-footer
-            button.btn.button-default type="button" data-dismiss="modal" Nevermind.
-            button.btn.btn-primary#create_feed_btn type="button" data-loading-text="Saving.." Create the feed!
-  
+
     .col-md-8#feed_details
       / Replaced via AJAX on feed selection.
 
@@ -71,3 +50,29 @@
         #disqus_thread
       .col-md-1
         | &nbsp;
+
+
+.modal.fade#rss_dialog tabindex="-1" role="dialog" aria-labelledby="rss_dialog_label" aria-hidden="true"
+  .modal-header
+    button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
+    h4.modal-title#rss_dialog_label Handy RSS URL.
+  .modal-body
+    p.lead
+      | Paste this URL into your BitTorrent client for nifty automatic downloading of all torrents published to the feed! (Don't forget to set an email/password for our required proxy server.)
+    .well.well-large
+      a id="rss_link" href="#" url_for('/')
+  .modal-footer
+      button.btn.button-default type="button" data-dismiss="modal" Close
+
+- if can? :create, Feed
+  .modal.fade#create_feed_dialog tabindex="-1" role="dialog" aria-labelledby="create_dialog_label" aria-hidden="true"
+    .modal-header
+      button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
+      h4.modal-title#create_feed_label Modal title
+    .modal-body
+      - @feed = Feed.new
+      = render partial: 'feeds/form'
+    .modal-footer
+      button.btn.button-default type="button" data-dismiss="modal" Nevermind.
+      button.btn.btn-primary#create_feed_btn type="button" data-loading-text="Saving.." Create the feed!
+
