--- a/app/views/welcome/_dashboard_feed_torrents.html.slim
+++ b/app/views/welcome/_dashboard_feed_torrents.html.slim
@@ -17,11 +17,13 @@ table.table.table-condensed.table-striped#feed_torrents
     / = render :partial => 'torrent_feed', :locals => {:torrents => (@selected_feed.torrents rescue [])}
     =render :partial => 'welcome/torrent', :collection => @feed.torrents
 
-.modal.fade#upload_torrent_dialog
-    .modal-header
-      button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
-      h3 Publish a torrent.
-    =form_for Torrent.new do |f|
+=form_for Torrent.new do |f|
+
+  .modal.fade#upload_torrent_dialog
+    .modal-content
+      .modal-header
+        button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
+        h3 Publish a torrent.
       .modal-body
         div class="field"
           = f.hidden_field :user_id, :value => current_user.id
@@ -36,10 +38,10 @@ table.table.table-condensed.table-striped#feed_torrents
           = f.text_field :slug, placeholder: 'demo_package_x', required: false
         div class="field"
           = f.label :tags
-          p class="muted" Comma-separated list of freeform tags. Try to stick to lowercase alphanumerics to make searching easier for     your subscribers.
+          p class="muted" Comma-separated list of freeform tags. Try to stick to lowercase  alphanumerics to make searching easier for     your subscribers.
           = f.text_field :tag_list, :class => "torrent_tags", required: true
         div class="field"
           = f.file_field :torrent_file, required: true
       .modal-footer
         a href="#" class="btn" data-dismiss="modal" Nevemind
-        = f.submit "Publish", :class => 'btn btn-primary', :id => 'publish_btn', :data => {:'loading-text' => 'Saving..'}
+        = f.submit "Publish", :class => 'btn btn-primary', :id => 'publish_btn', :data => {:' loading-text' => 'Saving..'} 
